# unique3

./: Makefile  README.md  unique3.spec
src/: ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac  unique.pc.in
src/doc/: Makefile.in
src/doc/reference/: Makefile.am  Makefile.in  unique-docs.xml  unique-sections.txt
src/tests/: Makefile.am  Makefile.in  test-unique.c
src/unique/: Makefile.am  Makefile.in  Unique-3.0.gir  uniqueapp.c  uniquebackend.c  uniqueenumtypes.c  uniqueenumtypes.c.in  uniqueenumtypes.h.in  uniqueinternals.h  uniquemarshal.c  uniquemarshal.h  uniquemarshal.list  uniquemessage.c  uniquemessage.h  uniqueversion.h  uniqueversion.h.in
src/unique/bacon/: Makefile.am  Makefile.in  uniquebackend-bacon.c  uniquebackend-bacon.h  uniquefactory-bacon.c  uniquefactory-bacon.h  uniquemessage-bacon.c  uniquemessage-bacon.h
src/unique/dbus/: Makefile.am  Makefile.in  uniquebackend-bindings.h  uniquebackend-dbus.c  uniquebackend-dbus.h  uniquebackend-dbus.xml  uniquebackend-glue.h  uniquefactory-dbus.c  uniquefactory-dbus.h
src/unique/gdbus/: Makefile.am  Makefile.in  uniquebackend-gdbus.c  uniquebackend-gdbus.h
